Add query parameter to some endpoints

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -8315,6 +8315,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/hash'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "List all groups"
@@ -8668,6 +8669,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/hash'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Get group files"
@@ -11338,6 +11340,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/filename'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Successfully got all CDB lists and the files where they are defined"
@@ -13938,6 +13941,7 @@ paths:
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/xml_filename'
         - $ref: '#/components/parameters/statusRLDParam'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Rule"
@@ -14718,6 +14722,7 @@ paths:
         - $ref: '#/components/parameters/xml_filename'
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/statusRLDParam'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "List of decoders files"
@@ -17291,6 +17296,7 @@ paths:
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Information about user"
@@ -17556,6 +17562,7 @@ paths:
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Return a list of roles"
@@ -18070,6 +18077,7 @@ paths:
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
+        - $ref: '#/components/parameters/query'
       responses:
         '200':
           description: "Return a list of policies"
