Add distinct parameter

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -7213,6 +7213,7 @@ paths:
         - $ref: '#/components/parameters/ip'
         - $ref: '#/components/parameters/registerIP'
         - $ref: '#/components/parameters/group_config_status'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "List of agents or error description"
@@ -8316,6 +8317,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/hash'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "List all groups"
@@ -8426,6 +8428,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/statusAgentParam'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "List of agents or error description"
@@ -8671,6 +8674,7 @@ paths:
         - $ref: '#/components/parameters/hash'
         - $ref: '#/components/parameters/query'
         - $ref: '#/components/parameters/select'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Get group files"
@@ -11070,6 +11074,7 @@ paths:
         - $ref: '#/components/parameters/log_level'
         - $ref: '#/components/parameters/query'
         - $ref: '#/components/parameters/select'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Wazuh node logs"
@@ -11343,6 +11348,7 @@ paths:
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/filename'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Successfully got all CDB lists and the files where they are defined"
@@ -12708,6 +12714,7 @@ paths:
         - $ref: '#/components/parameters/log_level'
         - $ref: '#/components/parameters/query'
         - $ref: '#/components/parameters/select'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Wazuh logs"
@@ -13043,6 +13050,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Get MITRE groups information"
@@ -13187,6 +13195,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Get MITRE mitigations information"
@@ -13305,6 +13314,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Get MITRE software information"
@@ -13376,6 +13386,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Get MITRE tactics information"
@@ -13460,6 +13471,7 @@ paths:
         - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Get MITRE techniques information"
@@ -13757,6 +13769,7 @@ paths:
         - $ref: '#/components/parameters/nist-800-53'
         - $ref: '#/components/parameters/tsc'
         - $ref: '#/components/parameters/mitre'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Rule"
@@ -13946,6 +13959,7 @@ paths:
         - $ref: '#/components/parameters/statusRLDParam'
         - $ref: '#/components/parameters/query'
         - $ref: '#/components/parameters/select'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Rule"
@@ -14653,6 +14667,7 @@ paths:
         - $ref: '#/components/parameters/filename'
         - $ref: '#/components/parameters/get_dirnames_path'
         - $ref: '#/components/parameters/statusRLDParam'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "List of decoders included in ossec.conf"
@@ -14728,6 +14743,7 @@ paths:
         - $ref: '#/components/parameters/statusRLDParam'
         - $ref: '#/components/parameters/query'
         - $ref: '#/components/parameters/select'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "List of decoders files"
@@ -16214,6 +16230,7 @@ paths:
         - $ref: '#/components/parameters/select'
         - $ref: '#/components/parameters/hotfix'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return an agent's hotfix results"
@@ -16274,6 +16291,7 @@ paths:
         - $ref: '#/components/parameters/broadcast'
         - $ref: '#/components/parameters/netmask'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of agent's network results"
@@ -16344,6 +16362,7 @@ paths:
         - $ref: '#/components/parameters/tx.dropped'
         - $ref: '#/components/parameters/rx.dropped'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of agent's network interfaces results"
@@ -16417,6 +16436,7 @@ paths:
         - $ref: '#/components/parameters/gateway'
         - $ref: '#/components/parameters/dhcp'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of agent's network protocol results"
@@ -16542,6 +16562,7 @@ paths:
         - $ref: '#/components/parameters/file_format'
         - $ref: '#/components/parameters/package_version'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of agent's packages results"
@@ -16645,6 +16666,7 @@ paths:
         - $ref: '#/components/parameters/state'
         - $ref: '#/components/parameters/process'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of agent's packages results"
@@ -16755,6 +16777,7 @@ paths:
         - $ref: '#/components/parameters/sgroup'
         - $ref: '#/components/parameters/suser'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of agent's processes results"
@@ -17302,6 +17325,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Information about user"
@@ -17568,6 +17592,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of roles"
@@ -18084,6 +18109,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of policies"
