Add the distinct parameter to the /manager/configuration endpoint

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -11846,6 +11846,7 @@ paths:
         - $ref: '#/components/parameters/raw'
         - $ref: '#/components/parameters/section'
         - $ref: '#/components/parameters/field'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Wazuh configuration"
@@ -17871,6 +17872,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/wait_for_complete'
         - $ref: '#/components/parameters/query'
+        - $ref: '#/components/parameters/distinct'
       responses:
         '200':
           description: "Return a list of security rules"
