--- a/src/engine/test/CMakeLists.txt
+++ b/src/engine/test/CMakeLists.txt
@@ -24,7 +24,8 @@ add_subdirectory(${TEST_SOURCE_DIR}/builder)
 add_subdirectory(${TEST_SOURCE_DIR}/cmds)
 add_subdirectory(${TEST_SOURCE_DIR}/hlp)
 add_subdirectory(${TEST_SOURCE_DIR}/logpar)
-add_subdirectory(${TEST_SOURCE_DIR}/json)
+add_subdirectory(${TEST_SOURCE_DIR}/dataStruct/json)
+add_subdirectory(${TEST_SOURCE_DIR}/dataStruct/yml)
 add_subdirectory(${TEST_SOURCE_DIR}/kvdb)
 add_subdirectory(${TEST_SOURCE_DIR}/router)
 add_subdirectory(${TEST_SOURCE_DIR}/logicExpression)
