--- a/api/test/integration/test_rule_endpoints.tavern.yaml
+++ b/api/test/integration/test_rule_endpoints.tavern.yaml
@@ -761,6 +761,17 @@ stages:
         data:
           total_affected_items: !anyint
 
+  - name: Get distinct rules
+    request:
+      verify: False
+      <<: *general_rules_request
+      params:
+        distinct: true
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern_utils:test_distinct_key
+
 ---
 test_name: GET /rules/requirement/pci_dss
 
@@ -1680,6 +1691,17 @@ stages:
       status_code: 400
       json:
         <<: *invalid_select
+
+  - name: Get distinct rules files
+    request:
+      verify: False
+      <<: *files_rules_request
+      params:
+        distinct: true
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern_utils:test_distinct_key
 
 ---
 test_name: GET /rules/files/(filename)
