--- a/api/test/integration/test_security_GET_endpoints.tavern.yaml
+++ b/api/test/integration/test_security_GET_endpoints.tavern.yaml
@@ -380,6 +380,17 @@ stages:
       json:
         error: 1407
 
+  - name: Get distinct security roles
+    request:
+      verify: False
+      <<: *all_roles_request
+      params:
+        distinct: true
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern_utils:test_distinct_key
+
 ---
 test_name: GET /security/policies
 
@@ -698,6 +709,17 @@ stages:
       status_code: 400
       json:
         error: 1407
+
+  - name: Get distinct security policies
+    request:
+      verify: False
+      <<: *all_policies_request
+      params:
+        distinct: true
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern_utils:test_distinct_key
 
 ---
 test_name: GET /security/rules
@@ -1055,6 +1077,17 @@ stages:
       status_code: 400
       json:
         error: 1407
+
+  - name: Get distinct security rules
+    request:
+      verify: False
+      <<: *all_rules_request
+      params:
+        distinct: true
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern_utils:test_distinct_key
 
 ---
 test_name: GET /security/user/authenticate
@@ -1546,6 +1579,17 @@ stages:
       status_code: 400
       json:
         error: 1407
+
+  - name: Get distinct security users
+    request:
+      verify: False
+      <<: *all_users_request
+      params:
+        distinct: true
+    response:
+      status_code: 200
+      verify_response_with:
+        function: tavern_utils:test_distinct_key
 
 ---
 test_name: GET /security/users/me
