--- a/.github/workflows/integration-tests-github-tier-0.yml
+++ b/.github/workflows/integration-tests-github-tier-0.yml
@@ -1,6 +1,7 @@
-name: GitHub integration tests tier 0
+name: GitHub integration tests tier 0 and 1 on Linux
 
 on:
+  workflow_dispatch:
   pull_request:
     paths:
         - ".github/workflows/integration-tests-github-tier-0.yml"
@@ -69,5 +70,4 @@ jobs:
       - name: Run github integration tests
         run: |
           cd tests/integration
-          sudo python -m pytest --tier 0 test_github/
-          
+          sudo python -m pytest --tier 0 --tier 1 test_github/
