Added Store mocks and rbac tests

--- a/src/engine/test/source/api/catalog/CMakeLists.txt
+++ b/src/engine/test/source/api/catalog/CMakeLists.txt
@@ -8,5 +8,5 @@ target_include_directories(catalog_test
   PRIVATE ${TEST_SOURCE_DIR}/common
 )
 
-target_link_libraries(catalog_test gtest_main api)
+target_link_libraries(catalog_test gtest_main api rbac::mocks)
 gtest_discover_tests(catalog_test)
