--- a/.github/workflows/integration-tests-github-tier-0-1-win.yml
+++ b/.github/workflows/integration-tests-github-tier-0-1-win.yml
@@ -85,4 +85,4 @@ jobs:
       - name: Run github integration tests
         run: |
           cd C:\wazuh\tests\integration
-          python -m pytest -m win32 --tier 0 --tier 1 test_github\
+          python -m pytest --tier 0 --tier 1 test_github\
