--- a/.github/workflows/integration-tests-github-tier-0-1-win.yml
+++ b/.github/workflows/integration-tests-github-tier-0-1-win.yml
@@ -84,5 +84,7 @@ jobs:
       # Run github integration tests.
       - name: Run github integration tests
         run: |
+          dir /s /b C:\ossec.log
           cd C:\wazuh\tests\integration
-          python -m pytest --tier 0 --tier 1 test_github\
+          python -m pytest -vvx --html=report.html test_github\
+          type report.html
