Making fimdb a shared library for Windows and delaying its load. Delaying load for libgcc in Windows.

--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ src/win32/VERSION
 src/win32/REVISION
 src/libwazuhshared.*
 src/libwazuhext.*
+src/win32/libgcc_s_dw2-1.*
 
 # Eclipse files
 .cproject
