--- a/.github/workflows/scan-build.yml
+++ b/.github/workflows/scan-build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang-tools-14 gcc-mingw-w64 g++-mingw-w64-i686 g++-mingw-w64-x86-64 nsis -y
+          sudo apt-get install -y clang-tools-14 gcc-mingw-w64 g++-mingw-w64-i686 g++-mingw-w64-x86-64 mingw-w64-tools nsis -y
       - name: Build
         id: build_step
         continue-on-error: true
