--- a/.github/workflows/windows-dll-hijack.yml
+++ b/.github/workflows/windows-dll-hijack.yml
@@ -1,6 +1,7 @@
 name: Testing DLL search order to prevent hijack
 
 on:
+  workflow_dispatch:
   pull_request:
     paths:
       - "src/**"
@@ -12,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install mingw
-        run: sudo apt install gcc-mingw-w64 g++-mingw-w64-i686 g++-mingw-w64-x86-64 nsis -y
+        run: sudo apt install gcc-mingw-w64 g++-mingw-w64-i686 g++-mingw-w64-x86-64 mingw-w64-tools nsis -y
       - name: make deps
         run: make -C src deps TARGET=winagent -j2
       - name: make
