--- a/.github/workflows/integration-tests-github-tier-0-1-win.yml
+++ b/.github/workflows/integration-tests-github-tier-0-1-win.yml
@@ -85,6 +85,6 @@ jobs:
       - name: Run github integration tests
         run: |
           cd C:\wazuh\tests\integration
-          python -m pytest -vvx --html=report.html test_github\
+          python -m pytest -vvs --html=report.html test_github\
           type report.html
           type "C:\Program Files (x86)\ossec-agent\ossec.log"
