Changed final uploaded folfer

--- a/.github/workflows/integration-tests-github-tier-0-1-win.yml
+++ b/.github/workflows/integration-tests-github-tier-0-1-win.yml
@@ -89,8 +89,8 @@ jobs:
           type report.html
           type "C:\Program Files (x86)\ossec-agent\ossec.log"
       # Upload html artifacts.
-      - name: Upload Artifact html
+      - name: Upload Artifact test-logs
         uses: actions/upload-artifact@v3
         with:
-          name: ossec-agent
-          path: C:\Program Files (x86)\ossec-agent
+          name: test-logs
+          path: C:\wazuh\tests\integration
