Added upload if failure

--- a/.github/workflows/integration-tests-github-tier-0-1-win.yml
+++ b/.github/workflows/integration-tests-github-tier-0-1-win.yml
@@ -91,6 +91,7 @@ jobs:
       # Upload html artifacts.
       - name: Upload Artifact test-logs
         uses: actions/upload-artifact@v3
+        if: failure()
         with:
           name: test-logs
           path: C:\wazuh\tests\integration
